Fixes light background color issue on IE

--- a/git-webui/src/share/git-webui/webui/css/git-webui.less
+++ b/git-webui/src/share/git-webui/webui/css/git-webui.less
@@ -125,7 +125,7 @@ body {
 }
 
 #newBranchName {
-    background-color: inherit;
+    background-color: @gray-dark;
     max-width: 12em;
     color: inherit;
     overflow: hidden;
